<resources>
    <string name="app_name">Recipes For You</string>
    <string name="sign_in_title">Sign In</string>
    <string name="register_title">Create Account</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="recipe_info">Category: %1$s\nRecipe: %2$s</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="guest">Continue as a guest</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="breakfast">Breakfast</string>
    <string name="open_website">Open website</string>
    <string name="recipe_video">Watch recipe video</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="back_to_categories">Back to Categories</string>
    <string name="website">Open Website</string>
    <string name="video">Watch recipe video</string>
    <string name="welcome_image_desc">Welcome illustration for the Cooking Recipes App</string>
    <string name="recipe_image_desc">Picture of the selected recipe</string>
    <string name="croissants_text">ΣΥΣΤΑΤΙΚΑ\n\n
Για τη γέμιση:\n
- 350 γρ. τυρί κρέμα\n
- 1 κ.σ. χυμό λεμονιού\n
- 60 γρ. άχνη ζάχαρη\n
- 1 κ.γ. εκχύλισμα βανίλιας\n
- 150 γρ. κρέμα γάλακτος 35%\n\n
Για τα κρουασάν:\n
- 300 γρ. βούτυρο\n
- 300 γρ. νερό, κρύο\n
- 30 γρ. φρέσκια μαγιά\n
- 50 γρ. κρυσταλλική ζάχαρη\n
- 570 γρ. αλεύρι για τσουρέκι, + έξτρα για τον πάγκο\n
- 12 γρ. αλάτι\n
- ½ κ.γ. ελαιόλαδο, για το μπολ\n
- ½-1 κ.γ. κόκκινο χρώμα ζαχ/κης σε πάστα\n\n
Για τη σύνθεση:\n
- 220 γρ. μαρμελάδα φράουλα\n\n
ΜΕΘΟΔΟΣ ΕΚΤΕΛΕΣΗΣ\n\n
Για τη γέμιση:\n
1. Ρίχνουμε στον κάδο του μίξερ το τυρί κρέμα, τον χυμό λεμονιού, την άχνη ζάχαρη, το εκχύλισμα βανίλιας και την κρέμα γάλακτος.\n
2. Χτυπάμε με το σύρμα σε μέτρια ταχύτητα για 1-2 λεπτά μέχρι να ομογενοποιηθούν και να έχουμε μία λεία κρέμα.\n
3. Βάζουμε τη γέμιση σε μια σακούλα ζαχαροπλαστικής και τη μεταφέρουμε στο ψυγείο μέχρι να φτιάξουμε τα κρουασάν.\n\n
Για τα κρουασάν:\n
4. Τοποθετούμε ένα μεγάλο κομμάτι λαδόκολλας στον πάγκο εργασίας και δημιουργούμε με έναν μαρκαδόρο ένα ορθογώνιο διαστάσεων 20x22 εκ.\n
5. Αναποδογυρίζουμε τη λαδόκολλα ώστε η πλευρά με το ορθογώνιο να είναι προς τα κάτω, διπλώνουμε προς τα μέσα μία-μία πλευρά στα σημεία του μαρκαδόρου ώστε να είναι ξεκάθαρο που θα διπλώσουμε στη συνέχεια, και ανοίγουμε ξανά τη λαδόκολλα. Η λαδόκολλα παραμένει αναποδογυρισμένη.\n
6. Κόβουμε τα 225 γρ. βούτυρο σε κομμάτια και τα μεταφέρουμε στη λαδόκολλα μέσα στο ορθογώνιο που δημιουργήσαμε ώστε να το καλύπτει όλο.\n
7. Διπλώνουμε ξανά όλες τις πλευρές της λαδόκολλας στα σημεία του μαρκαδόρου που διπλώσαμε στην αρχή δημιουργώντας έναν φάκελο, κλείνοντας μέσα το βούτυρο.\n
8. Αναποδογυρίζουμε τον φάκελο ώστε η πλευρά της ένωσης να είναι προς τα κάτω.\n
9. Πιέζουμε τη λαδόκολλα με έναν πλάστη ώστε να απλωθεί το βούτυρο και να γίνει ένα ενιαίο κομμάτι.\n
10. Μεταφέρουμε το κομμάτι του βουτύρου με τυλιγμένη τη λαδόκολλα στο ψυγείο μέχρι να το χρειαστούμε.\n
11. Ρίχνουμε στον κάδο του μίξερ το νερό, τη μαγιά, τη ζάχαρη και το αλεύρι.\n
12. Κόβουμε το υπόλοιπο βούτυρο σε μικρά κομμάτια, το ρίχνουμε και αυτό, και προσθέτουμε το αλάτι.\n
13. Χτυπάμε με τον γάντζο σε μέτρια ταχύτητα για 15 λεπτά μέχρι να δημιουργηθεί μια λεία και μαστιχωτή ζύμη που να ξεκολλάει από τα τοιχώματα του κάδου.\n
14. Αλείφουμε ένα μπολ με ελαιόλαδο. Αφαιρούμε 700 γρ. από τη ζύμη, την τοποθετούμε στον πάγκο εργασίας, την πλάθουμε σε στρογγυλό σχήμα και τη μεταφέρουμε στο λαδωμένο μπολ. Καλύπτουμε με διάφανη μεμβράνη και αφήνουμε στην άκρη.\n
15. Αλείφουμε ένα μικρότερο μπολ με ελαιόλαδο. Μεταφέρουμε την υπόλοιπη ζύμη στον πάγκο εργασίας, ρίχνουμε το κόκκινο χρώμα ζαχαροπλαστικής, την πλάθουμε μέχρι να γίνει κόκκινη και τη μεταφέρουμε σε στρογγυλό σχήμα στο μικρότερο λαδωμένο μπολ. Καλύπτουμε και αυτό το μπολ με διάφανη μεμβράνη.\n
16. Αφήνουμε και τα δύο μπολ στην άκρη να φουσκώσουν για 45-60 λεπτά ή μέχρι να διπλασιαστούν σε όγκο.\n
17. Πασπαλίζουμε τον πάγκο εργασίας με αλεύρι, μεταφέρουμε τη λευκή ζύμη χωρίς να την ξεφουσκώσουμε και την πασπαλίζουμε με αλεύρι. Ανοίγουμε με έναν πλάστη τη ζύμη σε ένα ορθογώνιο σχήμα διαστάσεων 22x30 εκ.\n
18. Στρώνουμε λαδόκολλα σε ένα ταψί, μεταφέρουμε τη ζύμη, καλύπτουμε με διάφανη μεμβράνη και βάζουμε στην κατάψυξη για 2 ώρες.\n
19. Πασπαλίζουμε τον πάγκο εργασίας ξανά με αλεύρι, μεταφέρουμε την κόκκινη ζύμη χωρίς να την ξεφουσκώσουμε και την πασπαλίζουμε με αλεύρι. Ανοίγουμε με έναν πλάστη την κόκκινη ζύμη σε ένα ορθογώνιο σχήμα διαστάσεων 24x18 εκ.\n
20. Στρώνουμε λαδόκολλα σε ένα ταψί, μεταφέρουμε την κόκκινη ζύμη, καλύπτουμε με διάφανη μεμβράνη και βάζουμε στην κατάψυξη για 2 ώρες.\n
21. Βγάζουμε τις ζύμες από την κατάψυξη και αφήνουμε στην άκρη για 1 ώρα σε θερμοκρασία δωματίου.\n
22. Βγάζουμε το βούτυρο με τη λαδόκολλα από το ψυγείο 2-3 λεπτά πριν το χρησιμοποιήσουμε.\n
23. Πασπαλίζουμε τον πάγκο με αλεύρι και μεταφέρουμε πάνω τη λευκή ζύμη. Ισιώνουμε τις γωνίες και πασπαλίζουμε τη ζύμη με αλεύρι.\n
24. Αφαιρούμε το βούτυρο από τη λαδόκολλα και το μεταφέρουμε πάνω στη ζύμη ώστε να καλύπτει τα 2/3 της.\n
25. Διπλώνουμε το 1/3 της ζύμης χωρίς βούτυρο προς τα μέσα. Διπλώνουμε και το άλλο 1/3 (με το βούτυρο) από πάνω. Αφαιρούμε το παραπανίσιο αλεύρι με πινέλο.\n
26. Γυρνάμε τη ζύμη ώστε η μεγάλη πλευρά να βρίσκεται μπροστά μας, πασπαλίζουμε με αλεύρι και την ανοίγουμε με πλάστη σε ορθογώνιο 22x60 εκ.\n
27. Διπλώνουμε το 1/3 από την κάθε πλευρά προς τα μέσα (μέχρι τη μέση) και μετά διπλώνουμε ξανά στη μέση. Βάζουμε στο ψυγείο για 30 λεπτά.\n
28. Επαναλαμβάνουμε το άνοιγμα και το δίπλωμα άλλες 2 φορές (ανά 30 λεπτά ψυγείο).\n
29. Στο τέλος, βάζουμε την κόκκινη ζύμη πάνω στη λευκή, ανοίγουμε σε φύλλο 35x43 εκ. και βάζουμε στο ψυγείο για 30 λεπτά.\n
30. Κόβουμε τη ζύμη οριζόντια στη μέση. Σημαδεύουμε ανά 8 εκ. και δημιουργούμε τρίγωνα.\n
31. Τυλίγουμε σε κρουασάν, αφήνουμε να φουσκώσουν για 1-2 ώρες.\n
32. Ψήνουμε στους 160°C στον αέρα για 23-25 λεπτά. Αφήνουμε να κρυώσουν.\n
33. Γεμίζουμε τα κρουασάν με την κρέμα τυριού και τη μαρμελάδα.\n
34. Διατηρούμε με τη γέμιση στο ψυγείο για 1-2 μέρες.</string>
    <string name="burrito_text">ΣΥΣΤΑΤΙΚΑ\n\n
- 5 αυγά, μεσαία\n
- 4 φέτες μπέικον\n
- 2-3 κ.σ. ελαιόλαδο\n
- 100 γρ. μιξ τυριών, τριμμένα\n
- 2 αραβικές πίτες, μεγάλες\n
- 2 κ.σ. μαγιονέζα\n
- 1 ώριμο αβοκάντο\n
- 50 γρ. καλαμπόκι, κονσέρβα\n
- 1 φρέσκο κρεμμυδάκι (το πράσινο μέρος)\n\n
ΜΕΘΟΔΟΣ ΕΚΤΕΛΕΣΗΣ\n\n
1. Βάζουμε τα αυγά, αλάτι και πιπέρι σε ένα μπολ και τα χτυπάμε με ένα πιρούνι.\n
2. Τοποθετούμε ένα τηγάνι σε δυνατή φωτιά και βάζουμε τις φέτες μπέικον ολόκληρες.\n
3. Προσθέτουμε λίγο ελαιόλαδο και σοτάρουμε το μπέικον για 1-2 λεπτά. Μεταφέρουμε το μπέικον σε ένα πιάτο.\n
4. Στο ίδιο τηγάνι ρίχνουμε το υπόλοιπο ελαιόλαδο και τα αυγά. Ψήνουμε την ομελέτα για 1-1,5 λεπτό μέχρι να δέσει (χωρίς να την αναποδογυρίσουμε).\n
5. Αποσύρουμε από τη φωτιά και πασπαλίζουμε το μιξ τυριών πάνω στην ομελέτα.\n
6. Κόβουμε την ομελέτα στη μέση και τη μοιράζουμε στις πίτες (καλύπτοντας τη μισή επιφάνεια).\n
7. Κόβουμε το αβοκάντο σε μικρά κυβάκια και τα ρίχνουμε πάνω από την ομελέτα.\n
8. Μοιράζουμε το καλαμπόκι και ψιλοκόβουμε το φρέσκο κρεμμυδάκι προσθέτοντάς το από πάνω.\n
9. Τυλίγουμε τις πίτες σε ρολό.\n
10. Τις βάζουμε στο τηγάνι και τις ψήνουμε για λίγα δευτερόλεπτα από κάθε πλευρά μέχρι να πάρουν ωραίο χρυσαφένιο χρώμα.</string>
    <string name="waffles_text">ΣΥΣΤΑΤΙΚΑ\n\n
- 170 γρ. αλεύρι γ.ο.χ.\n
- 20 γρ. κρυσταλλική ζάχαρη\n
- 6 γρ. ξηρή μαγιά\n
- ½ κ.γ. μαγειρική σόδα\n
- 1 βανιλίνη\n
- ½ κ.γ. αλάτι\n
- 300 γρ. γάλα πλήρες, χλιαρό\n
- 1 αυγό, μεσαίο\n
- 60 γρ. βούτυρο, λιωμένο\n
- λίγο βούτυρο ή ηλιέλαιο σε σπρέι (για τη βαφλιέρα)\n
- Παγωτό, πραλίνα, πουράκια (για το σερβίρισμα)\n\n
ΜΕΘΟΔΟΣ ΕΚΤΕΛΕΣΗΣ\n\n
1. Ρίχνουμε σε ένα μπολ το αλεύρι, τη ζάχαρη, τη μαγιά, τη σόδα, τη βανιλίνη και το αλάτι, και ανακατεύουμε με ένα σύρμα χειρός.\n
2. Προσθέτουμε το γάλα, το αυγό και το βούτυρο, και ανακατεύουμε με το σύρμα μέχρι να ομογενοποιηθεί το μείγμα και να γίνει ένας αραιός χυλός.\n
3. Σκεπάζουμε το μπολ και αφήνουμε το μείγμα να ξεκουραστεί σε ζεστό μέρος μέχρι να ενεργοποιηθεί η μαγιά.\n
4. Προθερμαίνουμε τη βαφλιέρα σε μέτρια προς δυνατή θερμοκρασία.\n
5. Ψεκάζουμε όλη την επιφάνεια της βαφλιέρας με βούτυρο ή ηλιέλαιο.\n
6. Ρίχνουμε μια κουτάλα από τον χυλό στη βαφλιέρα, καλύπτοντας τα ¾ της χωρητικότητάς της.\n
7. Κλείνουμε τη βαφλιέρα και ψήνουμε για 4-5 λεπτά μέχρι να πάρει χρυσαφένιο χρώμα και να γίνει τραγανή.\n
8. Αφαιρούμε τη βάφλα και τη μεταφέρουμε σε μια σχάρα για να κρυώσει.\n
9. Επαναλαμβάνουμε την ίδια διαδικασία με το υπόλοιπο μείγμα (θα βγουν 5-6 βάφλες).\n
10. Σερβίρουμε με παγωτό, πραλίνα και πουράκια.</string>
    <string name="kontosouvli_text">ΣΥΣΤΑΤΙΚΑ\n\n
- 800 γρ. φιλέτο στήθος κοτόπουλου\n
- 2 σκ. σκόρδο\n
- 50 γρ. μουστάρδα\n
- 1 κρεμμύδι\n
- 1 πράσινη πιπεριά\n
- 1 κόκκινη πιπεριά\n
- 35 γρ. ξίδι, από λευκό κρασί\n
- ½ κ.σ. ρίγανη, ξερή\n
- 3 κ.σ. ελαιόλαδο\n
- αλάτι, πιπέρι\n\n
ΜΕΘΟΔΟΣ ΕΚΤΕΛΕΣΗΣ\n\n
1. Κόβουμε τις σκελίδες σκόρδου στη μέση, τις βάζουμε στον πολυκόφτη (μούλτι) μαζί με το ελαιόλαδο και τις χτυπάμε μέχρι να λιώσει το σκόρδο.\n
2. Ρίχνουμε τη μουστάρδα και χτυπάμε ξανά μέχρι να ενσωματωθεί στο μείγμα.\n
3. Κόβουμε το κρεμμύδι σε μεγάλα κομμάτια, τα ανοίγουμε με τα χέρια μας και τα βάζουμε σε ένα μεγάλο μπολ.\n
4. Κόβουμε τις πιπεριές σε τετράγωνα κομμάτια και τις βάζουμε και αυτές στο μπολ.\n
5. Προσθέτουμε στο μπολ το ξίδι, τη ρίγανη, αλάτι και πιπέρι.\n
6. Φοράμε γάντια, κόβουμε τα φιλέτα κοτόπουλου σε τετράγωνα κομμάτια και τα ρίχνουμε στο μπολ. Ανακατεύουμε καλά.\n
7. Προσθέτουμε τη μαρινάδα από το μούλτι (με τη μουστάρδα και το σκόρδο) και ανακατεύουμε ξανά.\n
8. Περνάμε σε 3 μεταλλικές σούβλες μήκους 30 εκ. εναλλάξ τα κομμάτια κοτόπουλου και λαχανικών.\n
9. Μεταφέρουμε τα κοντοσούβλια στον κάδο της φριτέζας αέρος (air fryer) και ψήνουμε στους 200°C για 30 λεπτά. (Στον μισό χρόνο αναποδογυρίζουμε τα κοντοσούβλια).\n
10. Βγάζουμε από τον κάδο και σερβίρουμε (ιδανικά με πατάτες τηγανητές).</string>
</resources>