<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABB4E6"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#40000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"/>

    <Button
        android:id="@+id/btn_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/welcome_image_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/welcome"/>

</LinearLayout>
