<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ABB4E6"
    android:padding="16dp">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#2A3158"
            android:textStyle="bold|italic"
            android:textSize="18sp"
            android:layout_marginBottom="24dp"
            tools:text="Welcome Guest" />

        <Button
            android:id="@+id/btn_breakfast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breakfast"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btn_lunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunch"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btn_dinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:text="@string/dinner"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/recipe_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:background="#FFFFFF"/>

        <ScrollView
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/details_background"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp">

                        <ImageView
                            android:id="@+id/img_recipe"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="centerCrop"
                            android:layout_marginBottom="16dp"
                            android:contentDescription="@string/recipe_image_desc" />

                        <TextView
                            android:id="@+id/tv_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="#333333"
                            android:textStyle="bold"
                            android:layout_marginBottom="16dp"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/tv_recipe_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginBottom="24dp"/>

                        <Button
                            android:id="@+id/btn_website"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text= "@string/website"
                            android:background="@drawable/button_background"
                            android:textColor="@color/white"
                            android:layout_marginBottom="12dp"/>

                        <Button
                            android:id="@+id/btn_video"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text= "@string/video"
                            android:background="@drawable/button_background"
                            android:textColor="@color/white"
                            android:layout_marginBottom="8dp"/>
                </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_categories"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:visibility="gone"/>

</LinearLayout>
